// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Button /> > renders as expected based on provided props 1`] = `
<div>
  <div
    class="tw:bg-white"
  >
    <button
      class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-lm-brand tw:dark:border-dm-brand tw:text-lm-brand tw:dark:text-dm-brand tw:highlight:text-white tw:highlight:bg-lm-brand tw:dark:highlight:bg-dm-brand"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 2`] = `
<div>
  <div
    class="tw:bg-white"
  >
    <button
      class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-lm-brand tw:dark:border-dm-brand tw:text-white tw:bg-lm-brand tw:dark:bg-dm-brand tw:highlight:bg-lm-brand-dark tw:dark:highlight:bg-dm-brand-dark tw:highlight:border-lm-brand-dark tw:dark:highlight:border-dm-brand-dark tw:highlight:bg-lm-brand tw:dark:highlight:bg-dm-brand"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 3`] = `
<div>
  <div
    class="tw:bg-white"
  >
    <button
      class="tw:inline-flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-lm-brand tw:dark:border-dm-brand tw:text-lm-brand tw:dark:text-dm-brand tw:highlight:text-white tw:highlight:bg-lm-brand tw:dark:highlight:bg-dm-brand"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 4`] = `
<div>
  <div
    class="tw:bg-white"
  >
    <button
      class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-lm-brand tw:dark:border-dm-brand tw:text-lm-brand tw:dark:text-dm-brand tw:pointer-events-none tw:opacity-65"
      disabled=""
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 5`] = `
<div>
  <div
    class="tw:bg-white"
  >
    <button
      class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-1.5 tw:py-1 tw:text-sm tw:border-lm-brand tw:dark:border-dm-brand tw:text-lm-brand tw:dark:text-dm-brand tw:highlight:text-white tw:highlight:bg-lm-brand tw:dark:highlight:bg-dm-brand"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 6`] = `
<div>
  <div
    class="tw:bg-white"
  >
    <button
      class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-lm-brand tw:dark:border-dm-brand tw:text-lm-brand tw:dark:text-dm-brand tw:highlight:text-white tw:highlight:bg-lm-brand tw:dark:highlight:bg-dm-brand"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 7`] = `
<div>
  <div
    class="tw:bg-white"
  >
    <button
      class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-4 tw:py-2 tw:text-lg tw:border-lm-brand tw:dark:border-dm-brand tw:text-lm-brand tw:dark:text-dm-brand tw:highlight:text-white tw:highlight:bg-lm-brand tw:dark:highlight:bg-dm-brand"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 8`] = `
<div>
  <div
    class="tw:bg-white"
  >
    <button
      class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-lm-brand tw:dark:border-dm-brand tw:text-lm-brand tw:dark:text-dm-brand tw:highlight:text-white tw:highlight:bg-lm-brand tw:dark:highlight:bg-dm-brand"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 9`] = `
<div>
  <div
    class="tw:bg-white"
  >
    <button
      class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring-secondary tw:px-3 tw:py-1.5 tw:border-zinc-500 tw:text-zinc-500 tw:highlight:text-white tw:highlight:bg-zinc-500"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 10`] = `
<div>
  <div
    class="tw:bg-white"
  >
    <button
      class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring-danger tw:px-3 tw:py-1.5 tw:border-danger tw:text-danger tw:highlight:text-white tw:highlight:bg-danger"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 11`] = `
<div>
  <div
    class="tw:bg-white"
  >
    <button
      class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-lm-brand tw:dark:border-dm-brand tw:text-white tw:bg-lm-brand tw:dark:bg-dm-brand tw:highlight:bg-lm-brand-dark tw:dark:highlight:bg-dm-brand-dark tw:highlight:border-lm-brand-dark tw:dark:highlight:border-dm-brand-dark tw:highlight:bg-lm-brand tw:dark:highlight:bg-dm-brand"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 12`] = `
<div>
  <div
    class="tw:bg-white"
  >
    <button
      class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring-secondary tw:px-3 tw:py-1.5 tw:border-zinc-500 tw:text-white tw:bg-zinc-500 tw:highlight:bg-zinc-600 tw:highlight:border-zinc-600 tw:highlight:bg-zinc-500"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 13`] = `
<div>
  <div
    class="tw:bg-white"
  >
    <button
      class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring-danger tw:px-3 tw:py-1.5 tw:border-danger tw:text-white tw:bg-danger tw:highlight:bg-danger-dark tw:highlight:border-danger-dark tw:highlight:bg-danger"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 14`] = `
<div>
  <div
    class="tw:bg-white"
  >
    <a
      class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-lm-brand tw:dark:border-dm-brand tw:text-lm-brand tw:dark:text-dm-brand tw:highlight:text-white tw:highlight:bg-lm-brand tw:dark:highlight:bg-dm-brand"
      data-discover="true"
      href="/foo/bar"
    />
  </div>
</div>
`;
